--- a/.env.template
+++ b/.env.template
@@ -15,6 +15,19 @@ SNOWFLAKE_AUTHENTICATOR=snowflake
 ANTHROPIC_API_KEY=your_anthropic_api_key
 MODEL_NAME=claude-3-haiku-20240307
 
+# Add these new environment variables:
+
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_ORG_ID=your_organization_id
+
+# Google Gemini Configuration  
+GOOGLE_API_KEY=your_google_api_key
+
+# Azure OpenAI Configuration
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+
 # Application Settings
 LOG_LEVEL=INFO
 SAMPLE_SIZE=1000
