--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,4 @@ PyYAML>=6.0
 # Add these lines:
 openai>=1.50.0
 google-generativeai>=0.3.0
-litellm>=1.0.0  # Unified interface for multiple providers
+litellm>=1.0.0  # Unified interface for multiple providerstqdm>=4.64.0
